--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -1,12 +1,16 @@
-# CMake build script for project sources found under the "code" directory
-
 # ---------------------------------------------------------------------------
 # Collect source files
 # ---------------------------------------------------------------------------
-# Gather all .cpp files in sub-directories *except* main.cpp (which will be
-# compiled only into the final executable).
 file(GLOB_RECURSE PROJECT_SRC CONFIGURE_DEPENDS
-     "${CMAKE_CURRENT_SOURCE_DIR}/*/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+     "${CMAKE_CURRENT_SOURCE_DIR}/buffer/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/http/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/log/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/pool/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/server/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/timer/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/dao/*.cpp"
+     "${CMAKE_CURRENT_SOURCE_DIR}/service/*.cpp"
+)
 
 # Remove main.cpp from the library source list
 list(REMOVE_ITEM PROJECT_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
@@ -16,7 +20,7 @@ list(REMOVE_ITEM PROJECT_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 # ---------------------------------------------------------------------------
 add_library(mywebserver STATIC ${PROJECT_SRC})
 
-# Public include path so external targets can do #include "buffer/buffer.h" etc.
+# Public include path
 target_include_directories(mywebserver PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
@@ -26,19 +30,19 @@ target_include_directories(mywebserver PUBLIC
 # ---------------------------------------------------------------------------
 find_package(Threads REQUIRED)
 
-# MySQL client library (System lib via apt-get)
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(MYSQL REQUIRED mysqlclient)
+find_package(sqlpp11 CONFIG REQUIRED COMPONENTS MariaDB)
+
+find_package(Protobuf REQUIRED)
 
 # ---------------------------------------------------------------------------
 # Link all dependencies
 # ---------------------------------------------------------------------------
 target_link_libraries(mywebserver PUBLIC 
     Threads::Threads 
-    ${MYSQL_LIBRARIES}
     protobuf::libprotobuf
+    sqlpp11::sqlpp11
+    sqlpp11::mariadb
 )
-target_include_directories(mywebserver PUBLIC ${MYSQL_INCLUDE_DIRS})
 
 if(TARGET proto_generated)
     target_link_libraries(mywebserver PUBLIC proto_generated)
@@ -50,6 +54,3 @@ endif()
 add_executable(server "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 
 target_link_libraries(server PRIVATE mywebserver)
-
-# Allow `cmake --install` to deploy the binary (optional)
-# install(TARGETS server RUNTIME DESTINATION bin)
