feat(sqlpp11): added header code generation to cmake

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,42 @@
-.vscode/
-.idea/
-.cache/
-
-# Build
+# ---------------------------------------------------------------------------
+# Build & Compiled Output
+# ---------------------------------------------------------------------------
 build/
 bin/
 cmake-build-*/
 
-# vcpkg
+compile_commands.json
+
+# ---------------------------------------------------------------------------
+# Dependencies & Cache
+# ---------------------------------------------------------------------------
 vcpkg_installed/
 
-# Generated files
-*.pb.h
-*.pb.cc
+.cache/
+
+# ---------------------------------------------------------------------------
+# Generated Source Code
+# ---------------------------------------------------------------------------
 generated/
 
-# Test artifacts
-webbench-1.5/webbench
-webbench-1.5/webbench.o
+*.pb.h
+*.pb.cc
 
-# Logs
-/log
+server/src/model/*
 
-# OS
+.vscode/
+.idea/
 .DS_Store
 Thumbs.db
 
-compile_commands.json
+# ---------------------------------------------------------------------------
+# Logs & Runtime Data
+# ---------------------------------------------------------------------------
+/log/
+# *.log
+
+# ---------------------------------------------------------------------------
+# Tests & Tools
+# ---------------------------------------------------------------------------
+webbench-1.5/webbench
+webbench-1.5/webbench.o
