--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -13,18 +13,22 @@ foreach(PROTO_FILE ${PROTO_FILES})
     get_filename_component(PROTO_NAME ${PROTO_FILE} NAME_WE)
     set(PROTO_SRC "${PROTO_OUT_DIR}/${PROTO_NAME}.pb.cc")
     set(PROTO_HDR "${PROTO_OUT_DIR}/${PROTO_NAME}.pb.h")
+    set(PROTO_PY "${PROTO_OUT_DIR}/${PROTO_NAME}_pb2.py")
     
     list(APPEND PROTO_SRCS ${PROTO_SRC})
     list(APPEND PROTO_HDRS ${PROTO_HDR})
+    list(APPEND PROTO_PYS ${PROTO_PY})
 
     add_custom_command(
-        OUTPUT ${PROTO_SRC} ${PROTO_HDR}
+        OUTPUT ${PROTO_SRC} ${PROTO_HDR} ${PROTO_PY}
         COMMAND protobuf::protoc
-        ARGS --cpp_out=${PROTO_OUT_DIR} -I${CMAKE_CURRENT_SOURCE_DIR} ${PROTO_FILE}
+        ARGS --cpp_out=${PROTO_OUT_DIR} --python_out=${PROTO_OUT_DIR} -I${CMAKE_CURRENT_SOURCE_DIR} ${PROTO_FILE}
         DEPENDS ${PROTO_FILE}
-        COMMENT "Generating C++ code from ${PROTO_NAME}.proto"
+        COMMENT "Generating C++ and Python code from ${PROTO_NAME}.proto"
     )
 endforeach()
+
+add_custom_target(proto_python_generated ALL DEPENDS ${PROTO_PYS})
 
 add_library(proto_generated STATIC ${PROTO_SRCS} ${PROTO_HDRS})
 
