--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -18,10 +18,9 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
     protobuf-compiler \
+    python3-protobuf \
     python3-pyparsing \
     && rm -rf /var/lib/apt/lists/*
-
-RUN pip3 install --no-cache-dir protobuf
 
 WORKDIR /opt
 
