feat(docker): introduced scylladb

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,6 +42,7 @@
     "workspaceFolder": "/workspace",
     
     "postCreateCommand": "cmake -B build/release -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -DCMAKE_TOOLCHAIN_FILE=/opt/vcpkg/scripts/buildsystems/vcpkg.cmake",
+    "postStartCommand": "bash .devcontainer/init_scylla.sh",
     "remoteUser": "root",
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
