feat(p2p): added p2p message handler to core

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,6 +11,10 @@ RUN apt-get update && apt-get install -y \
     unzip \
     tar \
     pkg-config \
+    libuv1-dev \
+    libssl-dev \
+    rustc \
+    cargo \
     gdb \
     clangd \
     clang-format \
