feat(network_manager): added network_manager

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(ftxui CONFIG REQUIRED)
+find_package(Protobuf REQUIRED)
 
 add_executable(client main.cpp)
 target_sources(client PRIVATE
@@ -7,10 +8,17 @@ target_sources(client PRIVATE
     auth/register_page.cpp
     home_page.cpp
     ui_common.cpp
+    network_manager.cpp
 )
+
+if(TARGET proto_generated)
+    add_dependencies(client proto_generated)
+    target_link_libraries(client PUBLIC proto_generated)
+endif()
 
 target_link_libraries(client PUBLIC
     ftxui::screen
     ftxui::dom
     ftxui::component
+    protobuf::libprotobuf
 )
