feat(client): added friend service frontend to client

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,6 +6,8 @@ target_sources(client PRIVATE
     ui/auth/auth_page.cpp
     ui/auth/login_page.cpp
     ui/auth/register_page.cpp
+    ui/friend/add_friend_panel.cpp
+    ui/friend/handle_friend_panel.cpp
     ui/home_page.cpp
     ui/ui_common.cpp
     network_manager.cpp
