fix(docker): updated project running docker

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 build/
 bin/
 cmake-build-*/
-
 compile_commands.json
+CMakeUserPresets.json
 
 # ---------------------------------------------------------------------------
 # Dependencies & Cache
