--- a/.gitignore
+++ b/.gitignore
@@ -5,25 +5,20 @@ build/
 bin/
 cmake-build-*/
 compile_commands.json
-CMakeUserPresets.json
 
 # ---------------------------------------------------------------------------
 # Dependencies & Cache
 # ---------------------------------------------------------------------------
 vcpkg_installed/
-
 .cache/
 
 # ---------------------------------------------------------------------------
 # Generated Source Code
 # ---------------------------------------------------------------------------
 generated/
-
 *.pb.h
 *.pb.cc
-
 server/src/model/*
-
 .vscode/
 .idea/
 .DS_Store
@@ -33,10 +28,11 @@ Thumbs.db
 # Logs & Runtime Data
 # ---------------------------------------------------------------------------
 /log/
-# *.log
 
 # ---------------------------------------------------------------------------
 # Tests & Tools
 # ---------------------------------------------------------------------------
 webbench-1.5/webbench
 webbench-1.5/webbench.o
+perf.data
+perf.svg
