--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
+    privileged: true
+    cap_add:
+      - SYS_ADMIN
     volumes:
       - ..:/workspace:cached
       - ssl-certs:/etc/mysql/certs:ro
