--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -1,7 +1,14 @@
 find_package(protobuf CONFIG REQUIRED)
 
-# Define output directory for generated files
-set(PROTO_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
+# Define output directories for generated files
+set(PROTO_CPP_DIR ${CMAKE_CURRENT_BINARY_DIR}/cpp)
+set(PROTO_PY_DIR ${CMAKE_CURRENT_BINARY_DIR}/python)
+set(PROTO_GO_DIR ${CMAKE_CURRENT_BINARY_DIR}/go)
+
+# Create output directories
+file(MAKE_DIRECTORY ${PROTO_CPP_DIR})
+file(MAKE_DIRECTORY ${PROTO_PY_DIR})
+file(MAKE_DIRECTORY ${PROTO_GO_DIR})
 
 # Explicit proto list to avoid stale deleted files
 set(PROTO_FILES
@@ -19,10 +26,10 @@ set(PROTO_GOS)
 
 foreach(PROTO_FILE ${PROTO_FILES})
     get_filename_component(PROTO_NAME ${PROTO_FILE} NAME_WE)
-    set(PROTO_SRC "${PROTO_OUT_DIR}/${PROTO_NAME}.pb.cc")
-    set(PROTO_HDR "${PROTO_OUT_DIR}/${PROTO_NAME}.pb.h")
-    set(PROTO_PY "${PROTO_OUT_DIR}/${PROTO_NAME}_pb2.py")
-    set(PROTO_GO "${PROTO_OUT_DIR}/${PROTO_NAME}.pb.go")
+    set(PROTO_SRC "${PROTO_CPP_DIR}/${PROTO_NAME}.pb.cc")
+    set(PROTO_HDR "${PROTO_CPP_DIR}/${PROTO_NAME}.pb.h")
+    set(PROTO_PY "${PROTO_PY_DIR}/${PROTO_NAME}_pb2.py")
+    set(PROTO_GO "${PROTO_GO_DIR}/${PROTO_NAME}.pb.go")
     
     list(APPEND PROTO_SRCS ${PROTO_SRC})
     list(APPEND PROTO_HDRS ${PROTO_HDR})
@@ -32,9 +39,9 @@ foreach(PROTO_FILE ${PROTO_FILES})
     add_custom_command(
         OUTPUT ${PROTO_SRC} ${PROTO_HDR} ${PROTO_PY} ${PROTO_GO}
         COMMAND protobuf::protoc
-        ARGS --cpp_out=${PROTO_OUT_DIR}
-            --python_out=${PROTO_OUT_DIR}
-            --go_out=${PROTO_OUT_DIR} --go_opt=paths=source_relative
+        ARGS --cpp_out=${PROTO_CPP_DIR}
+            --python_out=${PROTO_PY_DIR}
+            --go_out=${PROTO_GO_DIR} --go_opt=paths=source_relative
             -I${CMAKE_CURRENT_SOURCE_DIR} ${PROTO_FILE}
         DEPENDS ${PROTO_FILE}
         COMMENT "Generating C++, Python and Go code from ${PROTO_NAME}.proto"
@@ -47,4 +54,4 @@ add_custom_target(proto_go_generated ALL DEPENDS ${PROTO_GOS})
 add_library(proto_generated STATIC ${PROTO_SRCS} ${PROTO_HDRS})
 
 target_link_libraries(proto_generated PUBLIC protobuf::libprotobuf)
-target_include_directories(proto_generated PUBLIC ${PROTO_OUT_DIR})
+target_include_directories(proto_generated PUBLIC ${PROTO_CPP_DIR})
